Removed FSM
Overly complicated for something we're trying to keep simple so just got
rid of the FSM. Simple job on a scheduled thread pool is more than
enough, especially since we don't care about the result of each "job".